fix search field looking bonders on Safari

--- a/content/css/_base.scss
+++ b/content/css/_base.scss
@@ -70,6 +70,9 @@ textarea:not([rows]) {
   scroll-margin-block: 5ex;
 }
 
+input[type=search] {
+  -webkit-appearance: textfield;  // Default special appearance won't style
+}
 
 button,
 input[type="reset"],
